Refractored exception handling classes

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,18 @@
     <artifactId>common</artifactId>
 
     <dependencies>
+         <!-- Spring Web dependency -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <!-- Spring Context dependency -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
